examples/exploit-example/klee-out-0/test000001.exec.err
Error: invalid function pointer
File: test.cc
Line: 36
assembly.ll line: 652
Stack: 
	#000000652 in __user_main (=1, =90561152) at test.cc:36
	#100000396 in __uClibc_main (main=114462088, argc=1, argv=90561152, app_init=0, app_fini=0, rtld_fini=0, stack_end=0) at libc/misc/internals/__uClibc_main.c:401
	#200000572 in main (=1, =90561152)
